--- a/.github/workflows/content-web.yml
+++ b/.github/workflows/content-web.yml
@@ -33,6 +33,7 @@ jobs:
      runs-on: ubuntu-latest
      steps:
      # Checkout the repo
+    - name: Checkout
     - uses: actions/checkout@master
 
     - name: Set up Docker Buildx
